# portal

./: .gitattributes  .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  RUSSIAN.md  audio.js  boromean_rings_pocket_dimension.ron  gl.js  index.html  params.js  portal.wasm  portals.wasm  quad-url.js  sapp_jsutils.js  scene.json  scene_monoportal_offset.json
.github/workflows/: build.yml  deploy-demo-wasm.yml
portal_lab/: index.html  manifest.json  portal_lab.js  portal_lab_app.js  sw.js
scenes/: 2n_rotating_monoportal.ron  all_dimension  all_dimension.ron  analytical_approach.ron  basics.ron  boot.dev.ron  borromean_rings.ron  borromean_rings_pocket_dimension.ron  companion_cube_texture.ron  cone.ron  cubic_portal.ron  cut_plane.ron  cut_prism.ron  cylinder.ron  cylinder_spherical.ron  digits_debug.ron  double_pentagon.ron  eigen_planes.py  empty.json  flat_triple_portal.ron  flower_monoportal.ron  half_spheres.ron  hexagonal_tiling.ron  hopf_link.json  hopf_link.ron  hopf_link_init.ron  inverted_surface.ron  k_offsetting_n_monoportal  k_offsetting_n_monoportal.ron  large_fully_in_small_using_surfaces.ron  leave_dimension.ron  linear_transformations.ron  matryoshka.ron  misc.json  mobius.json  mobius.ron  mobius_monoportal.json  mobius_monoportal.ron  monoportal.json  monoportal.ron  (+64 more)
src/: code_generation.rs  description.easymarkup  description.easymarkup.en  description.easymarkup.ru  frag.glsl  gui.rs  lib.rs  library.glsl  main.rs  shader_error_parser.rs  welcome.easymarkup.en  welcome.easymarkup.ru  with_swapped.rs
src/gui/: animation.rs  arithmetic.rs  camera.rs  combo_box.rs  common.rs  easing.rs  eng_rus.rs  glsl.rs  id_tools.rs  intersection_material.rs  material.rs  matrix.rs  mod.rs  object.rs  scene.rs  scene_serialized.rs  scenes.rs  storage.rs  storage2.rs  texture.rs  uniform.rs  unique_id.rs  video.rs
