[package]
name = "portal"
version = "0.2.0"
authors = ["ilya sheprut <optozorax@gmail.com>"]
edition = "2021"

[dependencies]
macroquad = "0.4.14"
egui-macroquad = "0.17.2"
glam = { version = "0.13.0", features = ["serde"] }
serde = "1.0.124"
ron = "0.6.4"
egui = "0.31.1"
fasteval = "0.2.4"
quad-url = "0.1.2"
egui_demo_lib = "0.31.0"
gesture-recognizer = { git = "https://github.com/optozorax/gesture-recognizer" }
argmin = "0.9.0"
finitediff = { version = "0.1.4", features = ["ndarray"] }
ndarray = "0.15.6"
argmin-math = { version = "0.3", features = ["ndarray_latest-nolinalg-serde"] }
nalgebra = "0.32.2"
once_cell = "1"
similar = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
color-backtrace = "0.5.0"
